# mini-rt

./: run_lab1_full.py
lab1/: CMakeLists.txt  lab1_final_results_16cpu.csv  lab1_final_results_8cpu.csv  run_lab1_full.py
lab2/: CMakeLists.txt  lab2_code.txt  lab2_results.csv  poisson_mpi.cpp  run_lab2.py
lab3/: CMakeLists.txt  lab3_results.csv  matmul.cu  run_lab3.py
src/test/: CMakeLists.txt  minirt_test.cpp
